hard-gists/2859545/run.log
=== Docker Run Log for 2859545 ===
Started at: Mi 29. Okt 13:18:20 CET 2025

[2025-10-29 13:18:20] START: Running container for 2859545
[2025-10-29 13:18:20] SUCCESS: Container 82c1301296169c0fcae45e5f0bc519e9eca14b65a4e627ecefab076e57f0d305 started for 2859545
=== Container logs for 2859545 ===
  File "/snippet.py", line 75
    print [i*1.0/(t-start)]
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2859545 ===
[2025-10-29 13:18:22] INFO: Container 82c1301296169c0fcae45e5f0bc519e9eca14b65a4e627ecefab076e57f0d305 has stopped
